--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="Svelte PWA" />
-    <link rel="apple-touch-icon" href="/images/icons/icon-152x152.png" />
+    <meta name="apple-mobile-web-app-title" content="Goodnotes" />
+    <link rel="apple-touch-icon" href="/images/icons/gn152.png" />
 
     <title>Vite + Svelte + TS</title>
 
